--- a/pages/artikel/detail.html
+++ b/pages/artikel/detail.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Tailwind Script CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../css/main.css" />
-    <title>Beasiswa S1</title>
+    <title>Detail Artikel</title>
   </head>
   <body>
     <!-- HEADER -->
@@ -17,7 +18,7 @@
       <div class="absolute w-full">
         <nav class="bg-transparent border-gray-200">
           <div
-            class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-4"
+            class="max-w-screen-xl flex flex-wrap items-center gap-20 mx-auto px-4"
           >
             <a href="../beranda/index.html" class="flex items-center">
               <img
@@ -355,176 +356,292 @@
           <h1
             class="font-semibold text-[24px] md:text-[40px] md:leading-[84px] tracking-wider max-w-[848px]"
           >
-            Beasiswa
+            Detail Artikel
           </h1>
           <div class="flex gap-2 text-[18px]">
             <p>Beranda</p>
             <div>/</div>
-            <p>Beasiswa</p>
+            <p>Artikel</p>
             <div>/</div>
-            <p class="text-[#FEB900] font-semibold">Beasiswa S1</p>
+            <p class="text-[#FEB900] font-semibold">Detail Artikel</p>
           </div>
         </div>
       </div>
     </header>
 
-    <div class="max-w-[1280px] mx-auto">
-      <h1 class="text-[48px] text-[#394867] text-center my-12 font-bold">
-        BEASISWA S1
-      </h1>
+    <div class="max-w-[1280px] mx-auto p-8 mb-12">
+      <div class="flex gap-8">
+        <div class="shadow-lg flex flex-col gap-4 p-12 max-w-[742px]">
+          <h1 class="text-[24px] font-bold text-[#394867]">
+            BRI BERI BEASISWA S2 UNTUK 20 JURNALIS FELLOWSHIP
+          </h1>
 
-      <!-- BEASISWA -->
-      <div class="max-w-[1280px] mx-auto mb-32">
-        <div>
-          <!-- LIST CARD BEASISWA -->
+          <div class="flex items-center gap-6">
+            <div class="flex item-center gap-2">
+              <img src="../../assets/icon-user.png" alt="icon-user" />
+              <p class="text-[#7E7E7E] text-[15px]">Rizki Salisa</p>
+            </div>
+            <p class="text-[#7E7E7E] text-[15px]">/</p>
+            <div class="flex item-center gap-2">
+              <img src="../../assets/icon-follder.png" alt="icon-folder" />
+              <p class="text-[#7E7E7E] text-[15px]">Berita</p>
+            </div>
+            <p class="text-[#7E7E7E] text-[14px]">7 Mei, 2023</p>
+            <p class="text-[#7E7E7E] text-[14px]">2 Komentar</p>
+          </div>
+
+          <figure>
+            <img src="./assets/artikel-2.png" alt="detail-beasiswa-1" w-full />
+          </figure>
+
           <div
-            class="px-12 py-4 grid grid-cols-1 lg:grid-cols-2 gap-x-2 gap-y-6"
+            class="flex flex-col gap-4 max-w-[650px] text-[13px] text-[#000000] leading-[23.5px]"
           >
-            <!-- CARD -->
-
-            <div
-              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
+            <p>
+              Sejumlah pesohor Tanah Air pada faktanya juga merupakan penerima
+              beasiswa. Sebut saja salah satunya Tasya Kamila.Artis yang masih
+              lekat dengan lagu Anak Gembala itu adalah seorang awardee beasiswa
+              LPDP (Lembaga Pengelola Dana Pendidikan). Tasya melanjutkan ke
+              jenjang magister Columbia University jurusan Publik Administration
+              pada 2015 silam.
+            </p>
+            <p>
+              Sama seperti peserta beasiswa LPDP lain, Tasya pun wajib melewati
+              serangkaian seleksi sebelum ditetapkan lulus sebagai penerima.
+              Penasaran apa saja trik Tasya untuk bisa lolos?
+            </p>
+            <p>
+              Tips Lolos Beasiswa ala Tasya Kamila Melalui acara BeasTalk
+              Official Launching Webinar "Gain Your Scholarship Knowledge, Set
+              Your Future Career" pada Sabtu (5/11/2022), Tasya mengurai kembali
+              apa saja yang dia lakukan selama mempersiapkan aplikasi beasiswa
+              LPDP.
+            </p>
+            <p>
+              1. Memanajemen Waktu dengan Baik Tasya mengaku, biasanya tantangan
+              mempersiapkan beasiswa adalah merasa kewalahan dengan segala
+              persyaratan dan informasi yang beredar."Kita bikin timeline per
+              minggu, per bulan. Apa saja target-target yang mau dicapai, apa
+              yang akan dikerjakan, to do list-nya (daftar yang akan dikerjakan)
+              gimana, dan assign (tetapkan) waktu sebaik-baiknya," jelasnya.Dia
+              menyebut, mungkin memang ada beberapa kegiatan yang memang harus
+              dikurangi. Tasya sendiri mau tidak mau selama hampir setahun lebih
+              fokus mempersiapkan persyaratan beasiswa dan kampus yang dia tuju
+              sebelum melamar beasiswa LPDP.
+            </p>
+            <p>
+              2. Jangan Fokus pada Rasa takutnya, Coba Urai Target ke
+              Langkah-langkah Kecil Lulusan Akuntansi Universitas Indonesia (UI)
+              itu menyampaikan, jangan fokus di rasa takut saat mendaftar
+              beasiswa. Seiring dengan meredam rasa takut itu, Tasya menyarankan
+              untuk mengurai target-target menjadi langkah-langkah yang lebih
+              kecil yang dapat diraih."Lakukan aja yang terbaik, diiringi dengan
+              doa karena kalau kita udah lakukan yang terbaik, apa pun hasilnya
+              itu yang terbaik buat kita," kata dia.
+            </p>
+            <p>
+              3. Cari Informasi Valid Sebanyak-banyaknya "Aku dulu dari
+              semester-semester akhir pas S1 udah mulai memantapkan diri,
+              kira-kira jurusan apa yang mau aku tuju untuk S2. Kemudian udah
+              bikin shortlisted (daftar) universities mana yang mau aku tuju.
+              Udah aku pelajari juga requirements-nya (syaratnya) apa aja,"
+              terang Tasya.Pendiri Green Movement Indonesia itu menyarankan para
+              calon penerima beasiswa untuk mencari informasi mengenai program
+              studi yang diinginkan. Jika sudah mengetahuinya, maka mahasiswa
+              akan mengetahui apa yang sudah dikuasai dan belum dikuasai."Aku
+              mempersiapkan untuk bisa submit (mengumpulkan syarat beasiswa) di
+              bulan Januari 2016, aku udah persiapkan dari Januari 2015,"
+              ujarnya.
+            </p>
+            <p>
+              4. Baca Instruksi Syarat Esai dengan Cermat "Kalian harus tahu
+              dulu, di persyaratannya esainya minta apa," sebutnya.Sementara,
+              personal statement (deskripsi diri) untuk kampus tujuan bisa
+              memiliki ketentuan yang berbeda-beda. Tasya mencontohkan Columbia
+              University hanya memperbolehkan 400 kata.Dia menganjurkan untuk
+              mengikuti kelas-kelas menulis terkait, agar bisa menulis personal
+              statement dengan jelas, berstruktur rapi, dan mencakup unsur-unsur
+              menarik.
+            </p>
+            <p>
+              5. Ketahui Misi Pemberi Beasiswa Tasya menekankan, dengan
+              mengetahui misi pemberi beasiswa, maka calon awardee bisa
+              mempersiapkan jawaban yang sesuai dengan misi tersebut."Jadi harus
+              ketahui juga sih kayak mission (misi) dari pemberi beasiswa itu
+              apa. Jadi, kita bisa mengerahkan jawaban-jawaban kita yang bisa
+              align dengan mission mereka, enggak off track (keluar jalur)
+              gitu," papar Tasya.Baca juga:Binus Incar Buka Program Unggulan di
+              Negara ASEANTasya berpesan satu hal penting bagi peminat beasiswa.
+              Menurutnya, keamanan menjadi sesuatu yang penting untuk
+              dipertimbangkan saat memilih kampus tujuan."Pastinya kita make
+              sure (memastikan) juga gimana sih campus safety-nya (keamanan
+              kampusnya), gimana sih housing-nya (pilihan huniannya),"
+              pungkasnya.
+            </p>
+          </div>
+        </div>
+        <!-- Cari Artikel -->
+        <div class="shadow-lg p-4 max-h-[450px]">
+          <div class="flex flex-col gap-2">
+            <label for="cari" class="text-[18px] font-semibold text-[#394867]"
+              >Cari</label
             >
-              <figure>
-                <img
-                  src="./assets/image-1.png"
-                  alt="card-img-1"
-                  class="object-cover"
-                />
-              </figure>
-
-              <div class="px-6 py-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Yayasan Karya Salemba Empat
-                </h2>
-                <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Yayasan Karya Salemba
-                  Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
-                  sains.
-                </p>
-                <a href="./detail.html"
-                  ><button class="card-button px-4 py-2 my-6">
-                    Selengkapnya
-                  </button></a
+            <div class="relative w-full">
+              <input type="search" id=location-search" class="border-[#BDBDBD]
+              rounded-md" required>
+              <button
+                type="submit"
+                class="absolute top-0 right-0 p-2.5 text-sm font-medium rounded-tr-md rounded-br-lg text-white bg-[#394867]"
+              >
+                <svg
+                  aria-hidden="true"
+                  class="w-5 h-5"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
                 >
-              </div>
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                  ></path>
+                </svg>
+                <span class="sr-only">Search</span>
+              </button>
             </div>
 
-            <div
-              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-            >
-              <figure>
-                <img
-                  src="./assets/image-2.png"
-                  alt="card-img-2"
-                  class="object-cover"
-                />
-              </figure>
+            <h3 class="text-[18px] font-semibold text-[#394867] mt-8 uppercase">
+              Artikel Terbaru
+            </h3>
 
-              <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Djarum Plus
-                </h2>
-                <p class="card-content lg:max-w-[300px]">
-                  Beasiswa ini diberikan oleh Djarum Foundation bagi mahasiswa
-                  D4 dan S1 yang sedang menempuh pendidikan.
-                </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+            <div class="flex flex-col gap-8">
+              <div class="flex gap-2 items-start">
+                <img
+                  src="../../assets/artikel-1.png"
+                  alt="img-1"
+                  class="w-[71px]"
+                />
+                <div>
+                  <div
+                    class="text-[12px] font-semibold text-[#394867] max-w-[175px]"
+                  >
+                    CARA MUDAH DITERIMA BEASISWA TINGKAT S1
+                  </div>
+                  <div class="text-[#C5C5C5] text-[10px]">12 Mei, 2023</div>
+                </div>
               </div>
-            </div>
-
-            <div
-              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-            >
-              <figure>
+              <div class="flex gap-2 items-start">
                 <img
-                  src="./assets/image-3.png"
-                  alt="image-3"
-                  class="object-cover"
+                  src="../../assets/artikel-2.png"
+                  alt="img-1"
+                  class="w-[71px]"
                 />
-              </figure>
-
-              <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Telkom University
-                </h2>
-                <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Telkom University untuk
-                  mahasiswa jenjang S1 dan D3.
-                </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <div>
+                  <div
+                    class="text-[12px] font-semibold text-[#394867] max-w-[175px]"
+                  >
+                    BRI BERI BEASISWA S2 UNTUK 20 JURNALIS FELLOWSHIP
+                  </div>
+                  <div class="text-[#C5C5C5] text-[10px]">12 Mei, 2023</div>
+                </div>
               </div>
-            </div>
-
-            <div
-              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-            >
-              <figure>
+              <div class="flex gap-2 items-start">
                 <img
-                  src="./assets/image-4.png"
-                  alt="card-img-4"
-                  class="object-cover"
+                  src="../../assets/artikel-3.png"
+                  alt="img-1"
+                  class="w-[71px]"
                 />
-              </figure>
-
-              <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Tokopedia
-                </h2>
-                <p class="card-content lg:max-w-[300px]">
-                  Tokopedia Scholarship, memberikan beasiswa kepada mahasiswa
-                  tahun ketiga jenjang S1 jurusan teknik lebih dari 20
-                  universitas negeri dan swasta di Indonesia.
-                </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-              </div>
-            </div>
-            <div
-              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-            >
-              <figure>
-                <img
-                  src="./assets/image-5.png"
-                  alt="card-img-5"
-                  class="object-cover"
-                />
-              </figure>
-
-              <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Pendidikan Indonesia
-                </h2>
-                <p class="card-content lg:max-w-[300px]">
-                  BPI Kemendikbud Ristek diadakan bagi calon mahasiswa jenjang
-                  S1, S2, dan S3, pendidikan profesi, pendidikan nongelar,
-                  pelajar berprestasi, guru, dosen.
-                </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-              </div>
-            </div>
-            <div
-              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-            >
-              <figure>
-                <img
-                  src="./assets/image-6.png"
-                  alt="card-img-6"
-                  class="object-cover"
-                />
-              </figure>
-
-              <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">Beasiswa Glints</h2>
-                <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Yayasan Karya Salemba
-                  Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
-                  sains.
-                </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <div>
+                  <div
+                    class="text-[12px] font-semibold text-[#394867] max-w-[175px]"
+                  >
+                    DJARUM BEASISWAPLUS DIBUKA KEMBALI
+                  </div>
+                  <div class="text-[#C5C5C5] text-[10px]">12 Mei, 2023</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- Komentar -->
+      <div class="mt-16">
+        <h1 class="text-[24px] font-bold text-[#394867]">2 Komentar</h1>
+
+        <div class="flex flex-col gap-8 mt-8">
+          <div class="flex items-center gap-4">
+            <div class="rounded-full bg-[#D9D9D9] w-[70px] h-[70px]"></div>
+            <div class="flex flex-col gap-1">
+              <div class="flex gap-20 items-center">
+                <div class="text-[20px] font-bold text-[#394867] uppercase">
+                  Andi Prasibu
+                </div>
+                <a class="text-[14px] font-bold text-[#394867]" href="#"
+                  >REPLY</a
+                >
+              </div>
+              <div class="text-[#C5C5C5] text-[15px]">12 Mei, 2023</div>
+              <p class="text-[14px] text-[#000000] uppercase mt-2">
+                Wah, terimakasih bgt infonya kak!!!
+              </p>
+            </div>
+          </div>
+
+          <div class="flex items-center gap-4">
+            <div class="rounded-full bg-[#D9D9D9] w-[70px] h-[70px]"></div>
+            <div class="flex flex-col gap-1">
+              <div class="flex gap-20 items-center">
+                <div class="text-[20px] font-bold text-[#394867] uppercase">
+                  Rizka Salisa
+                </div>
+                <a class="text-[14px] font-bold text-[#394867]" href="#"
+                  >REPLY</a
+                >
+              </div>
+              <div class="text-[#C5C5C5] text-[15px]">12 Mei, 2023</div>
+              <p class="text-[14px] text-[#000000] uppercase mt-2">
+                MANTAP, MENARIK BGT ISI KONTENNYA
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Tulis Komentar -->
+      <div class="mt-12">
+        <form action="#" class="shadow border-2 p-8 max-w-[712px] rounded-lg">
+          <h1 class="text-[#394867] text-[16px] uppercase font-bold mt-4">
+            Kirim Komentar
+          </h1>
+          <div class="p-4">
+            <textarea
+              class="w-full p-4 rounded-lg border-[#D0D0D0]"
+              cols="30"
+              rows="10"
+              placeholder="Tuliskan Komentarmu disini"
+            ></textarea>
+          </div>
+
+          <div class="flex gap-2 items-center">
+            <input
+              type="checkbox"
+              id="cek"
+              class="rounded bg-[#D0D0D0] w-[15px] h-[15px] border-none"
+            />
+            <label for="cek" class="text-[14px] tracking-wide text-[#C5C5C5]"
+              >Kirim sebagai anonim</label
+            >
+          </div>
+
+          <button
+            class="px-4 py-2 bg-[#394867] text-white text-[12px] font-bold w-[83px] mx-auto mt-6 mb-10 rounded-md"
+          >
+            KIRIM
+          </button>
+        </form>
       </div>
     </div>
 
@@ -552,7 +669,6 @@
         </div>
       </di>
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
   </body>
 </html>
