--- a/pages/artikel/index.html
+++ b/pages/artikel/index.html
@@ -401,7 +401,7 @@
 
             <div class="w-fulll bg-[#E3E3E3] h-[0.05rem]"></div>
             <div class="flex gap-2 items-center">
-              <a href="" class="text-[#717171] font-semibold text-[13px]"
+              <a href="./detail.html" class="text-[#717171] font-semibold text-[13px]"
                 >Selengkapnya</a
               >
               <img src="./assets/arrow.png" alt="arrow" />
