--- a/pages/beasiswa/detail.html
+++ b/pages/beasiswa/detail.html
@@ -18,7 +18,7 @@
       <div class="absolute w-full">
         <nav class="bg-transparent border-gray-200">
           <div
-            class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto px-4"
+            class="max-w-screen-xl flex flex-wrap items-center gap-20 mx-auto px-4"
           >
             <a href="../beranda/index.html" class="flex items-center">
               <img
@@ -356,18 +356,354 @@
           <h1
             class="font-semibold text-[24px] md:text-[40px] md:leading-[84px] tracking-wider max-w-[848px]"
           >
-            Beasiswa
+            Detail Beasiswa
           </h1>
           <div class="flex gap-2 text-[18px]">
             <p>Beranda</p>
             <div>/</div>
             <p>Beasiswa</p>
             <div>/</div>
-            <p class="text-[#FEB900] font-semibold">Beasiswa S1</p>
+            <p class="text-[#FEB900] font-semibold">Detail Beasiswa</p>
           </div>
         </div>
       </div>
     </header>
+
+    <div class="max-w-[1280px] mx-auto p-8 mb-12">
+      <div class="flex gap-8">
+        <div class="shadow-lg flex flex-col gap-4 p-12 max-w-[742px]">
+          <h1 class="text-[24px] font-bold text-[#394867]">
+            DJARUM BEASISWA PLUS 2023/2024
+          </h1>
+
+          <figure>
+            <img
+              src="./assets/detail-beasiswa-1.png"
+              alt="detail-beasiswa-1"
+              w-full
+            />
+          </figure>
+
+          <div class="flex gap-8">
+            <p class="text-[#394867] text-[14px]">ACHMAD DZUL</p>
+            <p class="text-[#394867] text-[14px]">5 Mei, 2023</p>
+            <p class="text-[#394867] text-[14px]">5 Komentar</p>
+          </div>
+
+          <div
+            class="flex flex-col gap-4 max-w-[650px] text-[13px] text-[#000000] leading-[23.5px]"
+          >
+            <p>
+              Sejak 1984, Djarum Foundation terus konsisten dalam memberikan
+              kontribusi terhadap dunia pendidikan di Indonesia. Langkah ini
+              diawali kesadaran bahwa pendidikan merupakan salah satu upaya
+              untuk meningkatkan kesejahteraan masyarakat dan bangsa dalam
+              mewujudkan masa depan yang lebih baik.
+            </p>
+            <p>
+              Djarum Foundation turut berperan aktif dalam memajukan pendidikan
+              di Indonesia melalui program beasiswa prestasi (merit based
+              scholarship) yang dikenal sebagai Djarum Beasiswa Plus bagi
+              mahasiswa berprestasi tinggi di Indonesia
+            </p>
+            <p>
+              Yang membedakan Djarum Beasiswa Plus dengan program beasiswa lain
+              adalah, selain mendapatkan dana beasiswa selama satu tahun, Beswan
+              Djarum (sebutan bagi penerima program Djarum Beasiswa Plus) juga
+              mendapatkan berbagai macam pelatihan ketrampilan lunak atau soft
+              skills guna mempersiapkan mereka menjadi calon pemimpin masa depan
+              bangsa. Pelatihan ini meliputi Nation Building, Character
+              Building, Leadership Development, Competition Challenges, serta
+              International Exposure. Tidak hanya berhenti sampai di sini,
+              melalui program Community Empowerment, Beswan Djarum juga
+              diberikan kesempatan untuk menerapkan berbagai ketrampilan lunak
+              yang telah diperoleh dengan melibatkan diri secara langsung dalam
+              memberikan jalan keluar pada suatu permasalahan sosial di
+              lingkungan tempat mereka berada.
+            </p>
+            <p>
+              Melalui pembudayaan dan pemberdayaan para penerima program Djarum
+              Beasiswa Plus ini, rangkaian pelatihan tersebut dimaksudkan guna
+              menyerasikan antara pencapaian akademik (hard skills) yang
+              diperoleh di perguruan tinggi dengan berbagai ketrampilan lunak
+              (soft skills) yang diperoleh dari program ini. Tujuannya agar
+              Beswan Djarum di kemudian hari menjadi pemimpin masa depan bangsa
+              yang cakap secara intelegensia maupun emosional.
+            </p>
+            <p>
+              Lebih dari 12.880 mahasiswa berprestasi telah menjadi penerima
+              program. Mereka berasal dari berbagai macam latar belakang
+              pendidikan di lebih dari 123 perguruan tinggi unggulan di seluruh
+              34 provinsi di Indonesia. Sebuah bukti keseriusan Djarum
+              Foundation dalam komitmennya membangun bangsa melalui pendidikan.
+            </p>
+            <p>Syarat Pendaftaran</p>
+            <ul class="list-disc ml-8">
+              <li>
+                Sedang menempuh pendidikan Strata 1/Diploma 4 di semester IV,
+                dari semua disiplin ilmu.
+              </li>
+              <li>
+                IPK minimum 3.00 pada semester III, serta dapat mempertahankan
+                IPK minimum 3.00 hingga akhir semester IV.
+              </li>
+              <li>
+                Aktif mengikuti kegiatan organisasi baik di dalam maupun luar
+                kampus.
+              </li>
+              <li>Tidak sedang menerima beasiswa dari pihak lain.</li>
+              <li>
+                Kuliah di mitra perguruan tinggi Program Djarum Beasiswa Plus
+              </li>
+            </ul>
+          </div>
+
+          <div class="flex justify-center mt-2">
+            <img src="./assets/detail-beasiswa-2.png" alt="detail-beasiswa-2" />
+          </div>
+        </div>
+        <!-- Cari Artikel -->
+        <div class="shadow-lg p-4 max-h-[450px]">
+          <div class="flex flex-col gap-2">
+            <label for="cari" class="text-[18px] font-semibold text-[#394867]"
+              >Cari</label
+            >
+            <div class="relative w-full">
+              <input type="search" id=location-search" class="border-[#BDBDBD]
+              rounded-md" required>
+              <button
+                type="submit"
+                class="absolute top-0 right-0 p-2.5 text-sm font-medium rounded-tr-md rounded-br-lg text-white bg-[#394867]"
+              >
+                <svg
+                  aria-hidden="true"
+                  class="w-5 h-5"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                  ></path>
+                </svg>
+                <span class="sr-only">Search</span>
+              </button>
+            </div>
+
+            <h3 class="text-[18px] font-semibold text-[#394867] mt-8 uppercase">
+              Artikel Terbaru
+            </h3>
+
+            <div class="flex flex-col gap-8">
+              <div class="flex gap-2 items-start">
+                <img
+                  src="../../assets/artikel-1.png"
+                  alt="img-1"
+                  class="w-[71px]"
+                />
+                <div>
+                  <div
+                    class="text-[12px] font-semibold text-[#394867] max-w-[175px]"
+                  >
+                    CARA MUDAH DITERIMA BEASISWA TINGKAT S1
+                  </div>
+                  <div class="text-[#C5C5C5] text-[10px]">12 Mei, 2023</div>
+                </div>
+              </div>
+              <div class="flex gap-2 items-start">
+                <img
+                  src="../../assets/artikel-2.png"
+                  alt="img-1"
+                  class="w-[71px]"
+                />
+                <div>
+                  <div
+                    class="text-[12px] font-semibold text-[#394867] max-w-[175px]"
+                  >
+                    BRI BERI BEASISWA S2 UNTUK 20 JURNALIS FELLOWSHIP
+                  </div>
+                  <div class="text-[#C5C5C5] text-[10px]">12 Mei, 2023</div>
+                </div>
+              </div>
+              <div class="flex gap-2 items-start">
+                <img
+                  src="../../assets/artikel-3.png"
+                  alt="img-1"
+                  class="w-[71px]"
+                />
+                <div>
+                  <div
+                    class="text-[12px] font-semibold text-[#394867] max-w-[175px]"
+                  >
+                    DJARUM BEASISWAPLUS DIBUKA KEMBALI
+                  </div>
+                  <div class="text-[#C5C5C5] text-[10px]">12 Mei, 2023</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Komentar -->
+      <div class="mt-16">
+        <h1 class="text-[24px] font-bold text-[#394867]">5 Komentar</h1>
+
+        <div class="flex flex-col gap-8 mt-8">
+          <div class="flex items-center gap-4">
+            <div class="rounded-full bg-[#D9D9D9] w-[70px] h-[70px]"></div>
+            <div class="flex flex-col gap-1">
+              <div class="flex gap-20 items-center">
+                <div class="text-[20px] font-bold text-[#394867] uppercase">
+                  Andi Prasibu
+                </div>
+                <a class="text-[14px] font-bold text-[#394867]" href="#"
+                  >REPLY</a
+                >
+              </div>
+              <div class="text-[#C5C5C5] text-[15px]">12 Mei, 2023</div>
+              <p class="text-[14px] text-[#000000] uppercase mt-2">
+                Wah, terimakasih bgt infonya kak!!!
+              </p>
+            </div>
+          </div>
+
+          <div class="flex items-center gap-4">
+            <div class="rounded-full bg-[#D9D9D9] w-[70px] h-[70px]"></div>
+            <div class="flex flex-col gap-1">
+              <div class="flex gap-20 items-center">
+                <div class="text-[20px] font-bold text-[#394867] uppercase">
+                  Rizka Salisa
+                </div>
+                <a class="text-[14px] font-bold text-[#394867]" href="#"
+                  >REPLY</a
+                >
+              </div>
+              <div class="text-[#C5C5C5] text-[15px]">12 Mei, 2023</div>
+              <p class="text-[14px] text-[#000000] uppercase mt-2">
+                DEADINE PENGUMPULAN BERKASNYA KAPAN YA??
+              </p>
+            </div>
+          </div>
+
+          <div class="flex flex-col ml-12 gap-10 my-6">
+            <div class="flex items-center gap-4">
+              <div class="rounded-full bg-[#D9D9D9] w-[70px] h-[70px]"></div>
+              <div class="flex flex-col gap-1">
+                <div class="flex gap-20 items-center">
+                  <div class="text-[20px] font-bold text-[#394867] uppercase">
+                    tYO wahyudi
+                  </div>
+                  <a class="text-[14px] font-bold text-[#394867]" href="#"
+                    >REPLY</a
+                  >
+                </div>
+                <div class="text-[#C5C5C5] text-[15px]">12 Mei, 2023</div>
+                <p class="text-[14px] text-[#000000] uppercase mt-2">Nitip</p>
+              </div>
+            </div>
+            <div class="flex items-center gap-4">
+              <div class="rounded-full bg-[#D9D9D9] w-[70px] h-[70px]"></div>
+              <div class="flex flex-col gap-1">
+                <div class="flex gap-20 items-center">
+                  <div class="text-[20px] font-bold text-[#394867] uppercase">
+                    Andi Akbar
+                  </div>
+                  <a class="text-[14px] font-bold text-[#394867]" href="#"
+                    >REPLY</a
+                  >
+                </div>
+                <div class="text-[#C5C5C5] text-[15px]">12 Mei, 2023</div>
+                <p class="text-[14px] text-[#000000] uppercase mt-2">
+                  MUNGKIN BISA CEK INSTAGRAM DJARUM AJA KAK
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="flex items-center gap-4">
+            <div class="rounded-full bg-[#D9D9D9] w-[70px] h-[70px]"></div>
+            <div class="flex flex-col gap-1">
+              <div class="flex gap-20 items-center">
+                <div class="text-[20px] font-bold text-[#394867] uppercase">
+                  CHATRIN MEYRINA
+                </div>
+                <a class="text-[14px] font-bold text-[#394867]" href="#"
+                  >REPLY</a
+                >
+              </div>
+              <div class="text-[#C5C5C5] text-[15px]">12 Mei, 2023</div>
+              <p class="text-[14px] text-[#000000] uppercase mt-2">
+                WAH, THANKS INFONYA, MINNNN
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Tulis Komentar -->
+      <div class="mt-12">
+        <form action="#" class="shadow border-2 p-8 max-w-[712px] rounded-lg">
+          <h1 class="text-[#394867] text-[16px] uppercase font-bold mt-4">
+            Kirim Komentar
+          </h1>
+          <div class="p-4">
+            <textarea
+              class="w-full p-4 rounded-lg border-[#D0D0D0]"
+              cols="30"
+              rows="10"
+              placeholder="Tuliskan Komentarmu disini"
+            ></textarea>
+          </div>
+
+          <div class="flex gap-2 items-center">
+            <input
+              type="checkbox"
+              id="cek"
+              class="rounded bg-[#D0D0D0] w-[15px] h-[15px] border-none"
+            />
+            <label for="cek" class="text-[14px] tracking-wide text-[#C5C5C5]"
+              >Kirim sebagai anonim</label
+            >
+          </div>
+
+          <button
+            class="px-4 py-2 bg-[#394867] text-white text-[12px] font-bold w-[83px] mx-auto mt-6 mb-10 rounded-md"
+          >
+            KIRIM
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer w-full h-[444px]">
+      <di class="footer-bg">
+        <div class="text-white absolute w-full">
+          <div class="pl-8 pt-32">
+            <p class="max-w-[247px] font-semibold leading-[18px] text-[16px]">
+              JALAN KARANG MENJANGAN NO. 96, MOJO, SURABAYA, JAWA TIMUR 60285
+            </p>
+
+            <div
+              class="mt-6 max-w-[247px] font-semibold leading-[18px] text-[16px]"
+            >
+              <p>TELP : +6285700011110</p>
+              <p>EMAIL : BEASISWAPLUS.CO.ID</p>
+            </div>
+
+            <div class="flex gap-2 items-center mt-4">
+              <img src="../../assets/facebook.png" alt="fc" />
+              <img src="../../assets/linkedin.png" alt="ln" />
+            </div>
+          </div>
+        </div>
+      </di>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
   </body>
 </html>
