--- a/pages/beasiswa/s2.html
+++ b/pages/beasiswa/s2.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../css/main.css" />
-    <title>Beasiswa S1</title>
+    <title>Beasiswa S2</title>
   </head>
   <body>
     <!-- HEADER -->
@@ -362,7 +362,7 @@
             <div>/</div>
             <p>Beasiswa</p>
             <div>/</div>
-            <p class="text-[#FEB900] font-semibold">Beasiswa S1</p>
+            <p class="text-[#FEB900] font-semibold">Beasiswa S2</p>
           </div>
         </div>
       </div>
@@ -370,7 +370,7 @@
 
     <div class="max-w-[1280px] mx-auto">
       <h1 class="text-[48px] text-[#394867] text-center my-12 font-bold">
-        BEASISWA S1
+        BEASISWA S2
       </h1>
 
       <!-- BEASISWA -->
@@ -387,20 +387,18 @@
             >
               <figure>
                 <img
-                  src="./assets/image-1.png"
+                  src="./assets/s2-1.png"
                   alt="card-img-1"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 py-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Yayasan Karya Salemba Empat
-                </h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa Fincad</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Yayasan Karya Salemba
-                  Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
-                  sains.
+                  Ditawarkan, termasuk bagi pelamar Indonesia yang ingin
+                  melanjutkan studi S2 di dalam negeri. Sasaran pelamarnya
+                  adalah PNS, peneliti, ataupun dosen.
                 </p>
                 <a href="./detail.html"
                   ><button class="card-button px-4 py-2 my-6">
@@ -415,21 +413,24 @@
             >
               <figure>
                 <img
-                  src="./assets/image-2.png"
+                  src="./assets/s2-2.png"
                   alt="card-img-2"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Djarum Plus
-                </h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa IsDB</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Beasiswa ini diberikan oleh Djarum Foundation bagi mahasiswa
-                  D4 dan S1 yang sedang menempuh pendidikan.
+                  Islamic Development Bank (IsDB) menawarkan beasiswa bagi
+                  negara-negara anggota IsDB, termasuk Indonesia. Beasiswa IsDB
+                  bisa dilamar untuk studi S2 di dalam negeri
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
 
@@ -438,21 +439,24 @@
             >
               <figure>
                 <img
-                  src="./assets/image-3.png"
+                  src="./assets/s2-3.png"
                   alt="image-3"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Telkom University
-                </h2>
+                <h2 class="card-title font-semibold mb-4">Program GSEP</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Telkom University untuk
-                  mahasiswa jenjang S1 dan D3.
+                  Beasiswa ini ditawarkan oleh Global Sustainable Electricity
+                  Partnership (GSEP). Beasiswa GSEP juga bisa dilamar bagi
+                  mereka yang sudah berstatus mahasiswa S2.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
 
@@ -461,22 +465,23 @@
             >
               <figure>
                 <img
-                  src="./assets/image-4.png"
+                  src="./assets/s2-4.png"
                   alt="card-img-4"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Tokopedia
-                </h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa LPDP</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Tokopedia Scholarship, memberikan beasiswa kepada mahasiswa
-                  tahun ketiga jenjang S1 jurusan teknik lebih dari 20
-                  universitas negeri dan swasta di Indonesia.
+                  Beasiswa Kementerian Pendidikan dan Kebudayaan menawarkan
+                  beasiswa S2 untuk studi di dalam negeri.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
             <div
@@ -484,22 +489,24 @@
             >
               <figure>
                 <img
-                  src="./assets/image-5.png"
+                  src="./assets/s2-5.png"
                   alt="card-img-5"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Pendidikan Indonesia
-                </h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa Teladan</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  BPI Kemendikbud Ristek diadakan bagi calon mahasiswa jenjang
-                  S1, S2, dan S3, pendidikan profesi, pendidikan nongelar,
-                  pelajar berprestasi, guru, dosen.
+                  Program beasiswa S2 ini merupakan program dari yayasan yang
+                  dimiliki oleh salah satu pengusaha Indonesia, Sukanto Tanoto.
+                  Beasiswa ini dikhususkan untuk PTN saja.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
             <div
@@ -507,20 +514,26 @@
             >
               <figure>
                 <img
-                  src="./assets/image-6.png"
+                  src="./assets/s2-6.png"
                   alt="card-img-6"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">Beasiswa Glints</h2>
+                <h2 class="card-title font-semibold mb-4">
+                  Beasiswa Dexa Award
+                </h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Yayasan Karya Salemba
-                  Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
-                  sains.
+                  Beasiswa S2 dalam negeri yang rutin dibuka. Ditawarkan oleh
+                  Dexa Group yang memberi peluang bagi lulusan S1 semua jurusan
+                  yang ingin melanjutkan S2 di dalam negeri.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
           </div>
