--- a/pages/beasiswa/s3.html
+++ b/pages/beasiswa/s3.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../css/main.css" />
-    <title>Beasiswa S1</title>
+    <title>Beasiswa S3</title>
   </head>
   <body>
     <!-- HEADER -->
@@ -362,7 +362,7 @@
             <div>/</div>
             <p>Beasiswa</p>
             <div>/</div>
-            <p class="text-[#FEB900] font-semibold">Beasiswa S1</p>
+            <p class="text-[#FEB900] font-semibold">Beasiswa S3</p>
           </div>
         </div>
       </div>
@@ -370,7 +370,7 @@
 
     <div class="max-w-[1280px] mx-auto">
       <h1 class="text-[48px] text-[#394867] text-center my-12 font-bold">
-        BEASISWA S1
+        BEASISWA S3
       </h1>
 
       <!-- BEASISWA -->
@@ -387,20 +387,18 @@
             >
               <figure>
                 <img
-                  src="./assets/image-1.png"
+                  src="./assets/s3-1.png"
                   alt="card-img-1"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 py-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Yayasan Karya Salemba Empat
-                </h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa LPDP</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Yayasan Karya Salemba
-                  Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
-                  sains.
+                  Program beasiswa kolaborasi antara Kementerian Agama dan LPDP
+                  yang diberikan kepada lulusan program S2 untuk melanjutkan
+                  studi jenjang S3 di Perguruan Tinggi dalam negeri.
                 </p>
                 <a href="./detail.html"
                   ><button class="card-button px-4 py-2 my-6">
@@ -415,77 +413,34 @@
             >
               <figure>
                 <img
-                  src="./assets/image-2.png"
+                  src="./assets/s3-2.png"
                   alt="card-img-2"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Djarum Plus
-                </h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa PMDSU</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Beasiswa ini diberikan oleh Djarum Foundation bagi mahasiswa
-                  D4 dan S1 yang sedang menempuh pendidikan.
+                  Program beasiswa yang ditujukan bagi lulusan S1 untuk menempuh
+                  pendidikan magister (S2) hingga doktor (S3) dalam satu kali
+                  waktu.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
 
-            <div
-              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-            >
-              <figure>
-                <img
-                  src="./assets/image-3.png"
-                  alt="image-3"
-                  class="object-cover"
-                />
-              </figure>
-
-              <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Telkom University
-                </h2>
-                <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Telkom University untuk
-                  mahasiswa jenjang S1 dan D3.
-                </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-              </div>
-            </div>
-
-            <div
-              class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
-            >
-              <figure>
-                <img
-                  src="./assets/image-4.png"
-                  alt="card-img-4"
-                  class="object-cover"
-                />
-              </figure>
-
-              <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">
-                  Beasiswa Tokopedia
-                </h2>
-                <p class="card-content lg:max-w-[300px]">
-                  Tokopedia Scholarship, memberikan beasiswa kepada mahasiswa
-                  tahun ketiga jenjang S1 jurusan teknik lebih dari 20
-                  universitas negeri dan swasta di Indonesia.
-                </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
-              </div>
-            </div>
             <div
               class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
             >
               <figure>
                 <img
                   src="./assets/image-5.png"
-                  alt="card-img-5"
+                  alt="image-3"
                   class="object-cover"
                 />
               </figure>
@@ -499,28 +454,37 @@
                   S1, S2, dan S3, pendidikan profesi, pendidikan nongelar,
                   pelajar berprestasi, guru, dosen.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
+
             <div
               class="card flex flex-col md:flex-row items-center lg:max-w-[550px]"
             >
               <figure>
                 <img
-                  src="./assets/image-6.png"
-                  alt="card-img-6"
+                  src="./assets/s3-4.png"
+                  alt="card-img-4"
                   class="object-cover"
                 />
               </figure>
 
               <div class="px-6 pt-6">
-                <h2 class="card-title font-semibold mb-4">Beasiswa Glints</h2>
+                <h2 class="card-title font-semibold mb-4">Beasiswa BUDI</h2>
                 <p class="card-content lg:max-w-[300px]">
-                  Program beasiswa ini disediakan oleh Yayasan Karya Salemba
-                  Empat untuk mahasiswa S1 yang berprestasi di bidang teknik dan
-                  sains.
+                  Program beasiswa ini ditujukan untuk dosen tetap yang ingin
+                  melanjutkan studi S3 di dalam negeri dengan tujuan memperkuat
+                  kapasitas akademik dan penelitian dosen di Indonesia.
                 </p>
-                <button class="card-button px-4 py-2 my-6">Selengkapnya</button>
+                <a href="./detail.html"
+                  ><button class="card-button px-4 py-2 my-6">
+                    Selengkapnya
+                  </button></a
+                >
               </div>
             </div>
           </div>
