--- a/pages/beranda/index.html
+++ b/pages/beranda/index.html
@@ -117,23 +117,23 @@
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/s2.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Settings</a
+                          >BEASISWA S2</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/s3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Earnings</a
+                          >BEASISWA S3</a
                         >
                       </li>
                       <li>
                         <a
-                          href="#"
+                          href="../beasiswa/d3.html"
                           class="block px-4 py-2 hover:bg-gray-900 text-[#B7B7B7]"
-                          >Sign out</a
+                          >BEASISWA D3</a
                         >
                       </li>
                     </ul>
